--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -3467,7 +3467,7 @@ a:focus {
   width: 100%;
 }
 
-.post-sidebar .sidebar-menu li:hover a {
+.post-sidebar .sidebar-menu li.active a {
   color: #246df8;
 }
 
@@ -10147,3 +10147,59 @@ header .absolute-nav {
     margin: 0 auto;
   }
 }
+
+/*---------------------------------------------
+	Alert
+---------------------------------------------*/
+.jy-alert {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 3px;
+  border: 1px solid; }
+  .jy-alert .icon {
+    height: 30px;
+    padding: 0 8px;
+    margin-right: 15px;
+    text-align: center;
+    line-height: 30px;
+    -ms-flex-preferred-size: 30px;
+    flex-basis: 30px;
+    -ms-flex-negative: 30;
+    flex-shrink: 30; }
+  .jy-alert .close_ {
+    margin-left: auto; }
+  .jy-alert p {
+    margin-bottom: 0; }
+  .jy-alert.success-alert {
+    color: #009a00;
+    background: rgba(0, 154, 0, 0.05);
+    border: 1px solid rgba(0, 154, 0, 0.3); }
+    .jy-alert.success-alert .icon {
+      background: rgba(0, 154, 0, 0.15); }
+  .jy-alert.info-alert {
+    color: #246df8;
+    background: rgba(36, 109, 248, 0.05);
+    border: 1px solid rgba(36, 109, 248, 0.3); }
+    .jy-alert.info-alert .icon {
+      background: rgba(36, 109, 248, 0.15); }
+  .jy-alert.warning-alert {
+    color: #ffce00;
+    background: rgba(255, 206, 0, 0.05);
+    border: 1px solid rgba(255, 206, 0, 0.3); }
+    .jy-alert.warning-alert .icon {
+      background: rgba(255, 206, 0, 0.15); }
+  .jy-alert.danger-alert {
+    color: #ff3366;
+    background: rgba(255, 51, 102, 0.05);
+    border: 1px solid rgba(255, 51, 102, 0.3); }
+    .jy-alert.danger-alert .icon {
+      background: rgba(255, 51, 102, 0.15); }
+
+.jy-alert + .jy-alert {
+  margin-top: 30px; }
